--- a/Pinecone_vector_db_application.ipynb
+++ b/Pinecone_vector_db_application.ipynb
@@ -187,7 +187,7 @@
     "# Vector Search DB In Pinecone - docs.pinecone.io- Created a account and an index...get api key and environment details from there\n",
     "pinecone.init(\n",
     "    api_key=\"\",\n",
-    "    environment=\"gcp-starter\"\n",
+    "    environment=\"\"\n",
     ")\n",
     "index_name=\"langchainvector\""
    ]
